SERVER-77666 Refactor how method field in $percentile is checked