src/mongo/db/pipeline/window_function/window_function_expression.h
@@ -37,6 +37,7 @@
 #include "mongo/db/pipeline/document_source.h"
 #include "mongo/db/pipeline/document_source_set_window_fields_gen.h"
 #include "mongo/db/pipeline/expression_dependencies.h"
+#include "mongo/db/pipeline/percentile_algo.h"
 #include "mongo/db/pipeline/window_function/window_bounds.h"
 #include "mongo/db/pipeline/window_function/window_function.h"
 #include "mongo/db/query/datetime/date_time_support.h"
@@ -946,7 +947,7 @@ public:
                        boost::intrusive_ptr<::mongo::Expression> initializeExpr,
                        WindowBounds bounds,
                        std::vector<double> ps,
-                       int32_t method)
+                       PercentileMethod method)
         : Expression(expCtx, std::move(accumulatorName), std::move(input), std::move(bounds)),
           _ps(std::move(ps)),
           _method(method),
@@ -960,7 +961,7 @@ public:
 
 private:
     std::vector<double> _ps;
-    int32_t _method;
+    PercentileMethod _method;
     boost::intrusive_ptr<::mongo::Expression> _intializeExpr;
 };
 
