jstests/aggregation/accumulators/percentiles_syntax.js
@@ -17,7 +17,7 @@ coll.drop();
 coll.insert({x: 42});
 
 /**
- * Tests to check that invalid $percentile specifications are rejected.
+ * Tests to check that invalid $percentile specifications are gracefully rejected.
  */
 function assertInvalidSyntax(percentileSpec, msg) {
     assert.commandFailed(
@@ -55,26 +55,40 @@ assertInvalidSyntax(
     "Should fail if 'p' field in $percentile is an array with any value outside of [0, 1] range");
 
 assertInvalidSyntax({$percentile: {p: [0.5, 0.7], input: "$x", method: 42}},
-                    "Should fail if 'method' field isn't a string");
+                    "$percentile should fail if 'method' field isn't a string");
 
 assertInvalidSyntax({$percentile: {p: [0.5, 0.7], input: "$x", method: "fancy"}},
-                    "Should fail if 'method' isn't one of _predefined_ strings");
+                    "$percentile should fail if 'method' isn't one of _predefined_ strings");
+
+assertInvalidSyntax({$percentile: {p: [0.5, 0.7], input: "$x", method: "discrete"}},
+                    "$percentile should fail because discrete 'method' isn't supported yet");
+
+assertInvalidSyntax({$percentile: {p: [0.5, 0.7], input: "$x", method: "continuous"}},
+                    "$percentile should fail because continuous 'method' isn't supported yet");
 
 /**
- * Tests for $median. $median desugars to $percentile with the field p:[0.5] added, and therefore
- * has similar syntax to $percentile.
+ * Tests for $median.
  */
-
 assertInvalidSyntax({$median: {p: [0.5], input: "$x", method: "approximate"}},
-                    "Should fail if 'p' is defined");
+                    "$median should fail if 'p' is defined");
 
 assertInvalidSyntax({$median: {method: "approximate"}},
-                    "Should fail if $median is missing 'input' field");
+                    "$median should fail if 'input' field is missing");
 
-assertInvalidSyntax({$median: {input: "$x"}}, "Should fail if $median is missing 'method' field");
+assertInvalidSyntax({$median: {input: "$x"}}, "Median should fail if 'method' field is missing");
 
 assertInvalidSyntax({$median: {input: "$x", method: "approximate", extras: 42}},
-                    "Should fail if $median contains an unexpected field");
+                    "$median should fail if there is an unexpected field");
+
+assertInvalidSyntax({$median: {input: "$x", method: "fancy"}},
+                    "$median should fail if 'method' isn't one of the _predefined_ strings");
+
+assertInvalidSyntax({$median: {input: "$x", method: "discrete"}},
+                    "$median should fail because discrete 'method' isn't supported yet");
+
+assertInvalidSyntax({$median: {input: "$x", method: "continuous"}},
+                    "$median should fail because continuous 'method' isn't supported yet");
+
 /**
  * Test that valid $percentile specifications are accepted. The results, i.e. semantics, are tested
  * elsewhere and would cover all of the cases below, we are providing them here nonetheless for
